--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,22 @@
   "start_url": "/",
   "display": "standalone",
   "theme_color": "lightsalmon",
-  "background_color": "gray"
+  "background_color": "gray",
+  "icons": [
+    {
+      "src": "icon_192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon_512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "411x615",
+      "type": "image/png"
+    }
+  ]
 }
