--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,17 @@
   "background_color": "gray",
   "icons": [
     {
-      "src": "icon_192.png",
+      "src": "/icons/icon_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon_512.png",
+      "src": "/icons/icon_512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "icon.png",
+      "src": "/icons/icon.png",
       "sizes": "411x615",
       "type": "image/png"
     }
